--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -58,15 +58,15 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: mattlidonni/hw9-fastapi:${{ github.sha }} # Uses the Git SHA for tagging
+          tags: mattlidonni/is219-hw9:${{ github.sha }} # Uses the Git SHA for tagging
           platforms: linux/amd64,linux/arm64 # Multi-platform support
-          cache-from: type=registry,ref=kaw393939/devops_demo:cache
+          cache-from: type=registry,ref=mattlidonni/is219-hw9:cache
           cache-to: type=inline,mode=max
           
       - name: Scan the Docker image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'mattlidonni/hw9-fastapi:${{ github.sha }}'
+          image-ref: 'mattlidonni/is219-hw9:${{ github.sha }}'
           format: 'table'
           exit-code: '1' # Fail the job if vulnerabilities are found
           ignore-unfixed: true
